# scatterfit_python

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: examples.py
scatterfit/: __init__.py  scatterfit.py
