# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scatterfit"
version = "0.1.1"
authors = [
  { name="Leo Ahrens", email="leo@ahrensmail.de" },
]
description = "Python package for scatter plots with flexible fit lines and binning."
readme = "README.md"
license = { file="LICENSE" } # Make sure LICENSE file exists
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Creative Commons Attribution-NonCommercial 4.0 International License (CC BY-NC 4.0)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=1.2",
    "numpy>=1.19",
    "statsmodels>=0.12",
    "scipy>=1.5",
    "matplotlib>=3.3",
    "seaborn>=0.11",
    "patsy>=0.5",
]
[project.urls]
"Homepage" = "https://github.com/leojahrens/scatterfit_python"
"Bug Tracker" = "https://github.com/leojahrens/scatterfit_python/issues"